fix: convert stream to list correctly & modify config